--- a/frontend/public/smoosic/styles/menus.css
+++ b/frontend/public/smoosic/styles/menus.css
@@ -1,25 +1,23 @@
-
-
 .control-menu-message {
-    display:none;
+  display: none;
 }
 body.slash-menu .control-menu-message {
-    display:block;
-	position:absolute;
-	/* right:10px; */
-	top:350px;
-	background:#fff;
-	z-index: 6;
-	padding:5px;
-	border:solid #8d8 2px;
-	border-radius:3px;
+  display: block;
+  position: absolute;
+  /* right:10px; */
+  top: 350px;
+  background: #fff;
+  z-index: 6;
+  padding: 5px;
+  border: solid #8d8 2px;
+  border-radius: 3px;
 }
 .menuElement {
-	position:absolute;
-	list-style:none;
+  position: absolute;
+  list-style: none;
   z-index: 13;
   background: #fff;
-	padding:0;
+  padding: 0;
   max-height: calc(100% - 80px);
   overflow-y: auto;
 }
@@ -34,50 +32,51 @@ body.slash-menu .control-menu-message {
   margin-right: 10px;
 }
 .menuOption .menuText {
-    display:block;
-    flex:3;
+  display: block;
+  flex: 3;
 }
 
 .menuOption .icon {
-    display:block;
-    flex:1;
+  display: block;
+  flex: 1;
 }
 
 .menuOption .menuKey {
-    flex:1;
-    display:block;
+  flex: 1;
+  display: block;
 }
-.menuElement 	.menuOption button:focus-within {
-	background:#ccf;
-	border:2px green solid;
-	font-weight: bold;
+.menuElement .menuOption button:focus-within {
+  background: #ccf;
+  border: 2px green solid;
+  font-weight: bold;
 }
 
 .menuElement .menuOption button {
-	width: 100%;
+  width: 100%;
   height: 100%;
-  display:flex;
-  flex-flow:row;
+  display: flex;
+  flex-flow: row;
   padding: 8px 5px;
 }
 .separator {
-	width:15px;
-	/* text-align: center; */
-	display: inline-block;
-	font-weight: bold;
-	text-justify:center;
+  width: 15px;
+  /* text-align: center; */
+  display: inline-block;
+  font-weight: bold;
+  text-justify: center;
 }
 
-body.modal .overlay,body.showAttributeDialog .overlay {
-	display:block;
-	position:absolute;
-	width:100%;
-	height:100%;
-	z-index:2;
-    opacity: 0.2;
-	background: #333;
+body.modal .overlay,
+body.showAttributeDialog .overlay {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  opacity: 0.2;
+  background: #333;
 }
 
 body.showAttributeDialog.textEditor .overlay {
-	display:none;
+  display: none;
 }
